# src/pedido/model/create.model.go
@@ -1,0 +1,6 @@
+package pedido_model
+
+type Create struct {
+	UsuarioId string `json:"usuarioId"`
+	Pedido    string `json:"pedido"`
+}
